modified:   _config.yml

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 layout: default
 ---
 <section id="intro">
+    <div style="background-color: #dd3d3d; color: white; padding: 20px;">
+        <h3 style="font-size: 1.5rem;">Disclaimer</h3>
+        <p>This history blog <b>may</b> explore sensitive political content for educational purposes (As an IB MYP project). The focus here is exploration of historical information. I recommend thoughtful engagement and respectful discourse on these topics.</p>
+    </div>
+
     <div class="flex-row-between">
         <h1>{{ site.greetings }}</h1>
         <button title="Change theme" id="theme-toggle" onclick="modeSwitcher()">
