modified:   CONTRIBUTING.md 	modified:   index.html 	deleted:    light-theme.jpg 	deleted:    lighthouse_test.png 	deleted:    robots.txt

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
 
 
 
-<div class="search-article">
+<div class="search-article" style="padding: 5px">
     <label for="search-input" aria-hidden="true">
         <!-- Magnifier -->
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
