--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@ layout: default
         <h3 style="font-size: 1.5rem;">Disclaimer</h3>
         <p>This history blog <b>may</b> explore sensitive political content for educational purposes (As an IB MYP project). The focus here is exploration of historical information. I recommend thoughtful engagement and respectful discourse on these topics.</p>
     </div>
+    <br/>
 
 
 </section>
 
 
 
-<div class="search-article" style="padding: 5px">
+<div class="search-article">
     <label for="search-input" aria-hidden="true">
         <!-- Magnifier -->
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
